# hexlet-flask-example

./: .gitignore  README.md  example.py  makefile  pyproject.toml  requirements.txt
data/: users.json
templates/users/: edit.html  index.html  new.html  show.html  start_page.html
